--- a/app/views/instance_admin/manage/transactable_types/action_types/_pricing.html.haml
+++ b/app/views/instance_admin/manage/transactable_types/action_types/_pricing.html.haml
@@ -11,5 +11,5 @@
   .col-md-2
     = f.input :max_price, as: :numeric
   .col-md-1
-    = link_to_remove_association f, class: 'remove_fields' do
+    = link_to_remove_association f, class: 'remove_fields', data: { confirm: t('confirmations.are_you_sure_delete_price')} do
       .action--remove x
