--- a/app/views/home/search/_geolocation.liquid
+++ b/app/views/home/search/_geolocation.liquid
@@ -1,6 +1,10 @@
 <div class="{{ transactable_type.calculate_input_size }}">
-  <div class="geolocation no-bookings">
+  <div class="geolocation no-bookings" data-enable-geo-localization="{{ platform_context.enable_geo_localization }}">
     <span class="ico-crosshairs"></span>
+
+    <div class='geo-loading text-center' data-loading style='display: none'>
+        <img src="{{ "spinner.gif" | image_url }}" alt="Spinner" />
+    </div>
   </div>
   <input class="query" name="loc" placeholder="{{ transactable_type.geolocation_placeholder }}" type="text" />
 </div>
