--- a/app/views/listings/_show.html.liquid
+++ b/app/views/listings/_show.html.liquid
@@ -1,146 +1,12 @@
-{% if listing.transactable_type.show_page_enabled? %}
-  {% assign photos = listing.photos %}
+{% if current_user == blank %}
+  {% include 'listings/ask_for_sign_up.html' %}
 {% else %}
-  {% assign photos = listing.location.photos %}
+  {% assign collaborator = current_user | find_collaborator: listing %}
+  {% if collaborator.approvied_by_owner? or current_user.id == listing.creator_id %}
+    {% include 'listings/case_details.html' %}
+  {% else %}
+    {% include 'listings/ask_for_permission.html', collaborator: collaborator %}
+  {% endif %}
+
 {% endif %}
-{% assign photos_count = photos | size %}
-<article id="space">
-  <div class="container-fluid">
-    <div class="row-fluid padding-row">
-      <div class="span12 nested">
-      <h1>{%if listing.transactable_type.show_page_enabled? %}{{ listing.name | filter_text }}{%else%}{{ location.name | filter_text }}{%endif%}</h1>
-      </div>
-    </div>
-    <div class="container-row">
-      <div class="two-thirds column left">
-        <article class="photos">
-          <div class="listing-photos" data-photo-aspect-w="895" data-photo-aspect-h="554">
-            <div class="carousel slide" id="photos-container">
-              {% if photos_count > 0 %}
-                <ol class="carousel-indicators">
-                  {% assign index = 0 %}
-                  {% for photo in photos %}
-                    <li class="{%if index == 0 %}active{%endif%}" data-target="#photos-container" {%if photos_count > 1 %}data-slide-to='{{ index }}'{%endif%}>{% assign index = index | plus: 1 %}{{ index }}</li>
-                  {% endfor %}
-                </ol>
-                <div class="carousel-inner">
-                  {% assign index = 0 %}
-                  {% for photo in photos %}
-                    <div class="item {%if index == 0 %}active{%endif%}" data-modalize="true">
-                      <img src="{{ photo.golden }}" alt="{{photo.listing_name}}" title="{{ photo.listing_name }}" />
-                      <div class="info">
-                        <div class="caption">{{ photo.caption }} #{{ photo.listing_name }}</div>
-                      </div>
-                    </div>
-                    {% assign index = index | plus: 1 %}
-                  {% endfor %}
-                </div>
-              {% else %}
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <img src="{{ listing.space_placeholder }}" height="554" width="895" title="{{ photo.listing_name}}" alt="{{ photo.listing_name }}" />
-                  </div>
-                </div>
-              {% endif %}
-              <button class="enlarge btn" type="button" data-gallery-enlarge="true" data-toggle="modal" data-target="#fullscreen-gallery">
-              <span class="ico-enlarge"></span>
-              </button>
-              {% if photos_count > 1 %}
-                <div class="carousel-nav">
-                  <a href="#photos-container" class="carousel-control left ico-chevron-left" data-slide='prev'></a>
-                  <a href="#photos-container" class="carousel-control right ico-chevron-right" data-slide='next'></a>
-                </div>
-              {% endif %}
-            </div>
-          </div>
-        </article>
-        <div id="fullscreen-gallery" class="modal hide fade modal-fullscreen" aria-hidden="true" aria-labelledby="fullscreen-gallery-label" role="dialog" tabindex="-1">
-          <div class="loading">
-            <img src="{{ 'components/modal/loader.gif' | image_url }}" />
-          </div>
-          <div id="fullscreen-gallery-content" class="modal-body">
-            <div class="listing-photos" data-photo-aspect-w="895" data-photo-aspect-h="554">
-              <div class="carousel" id="photos-container-enlarged">
-                {% if listing.has_photos? %}
-                  <ol class="carousel-indicators">
-                    {% assign index = 0 %}
-                    {% for photo in photos %}
-                      <li class="{%if index == 0 %}active{%endif%}" data-target="#photos-container-enlarged" data-slide-to='{{ index }}'>{% assign index = index | plus: 1 %}{{ index }}</li>
-                    {% endfor %}
-                  </ol>
-                  <div class="carousel-inner">
-                    {% assign index = 0 %}
-                    {% for photo in photos %}
-                      <div class="item {%if index == 0 %}active{%endif%}" data-modalize="true">
-                        <img data-src="{{ photo.fullscreen }}" alt="{{photo.listing_name}}" title="{{ photo.listing_name }}" />
-                        <div class="info">
-                          <div class="caption">{{ photo.caption }} #{{ photo.listing_name }}</div>
-                        </div>
-                      </div>
-                      {% assign index = index | plus: 1 %}
-                    {% endfor %}
-                  </div>
-                {% else %}
-                  <div class="carousel-inner">
-                    <div class="item active">
-                      <img src="{{ listing.space_placeholder }}" height="554" width="895" title="{{title.name}}" alt="{{listing.name}}" />
-                    </div>
-                  </div>
-                {% endif %}
-                <button class="btn close" type="button" data-dismiss="modal"><span class="ico-close"></span></button>
-                {% if photos_count > 1 %}
-                  <div class="carousel-nav">
-                    <a href="#photos-container-enlarged" class="carousel-control left ico-chevron-left" data-slide='prev'></a>
-                    <a href="#photos-container-enlarged" class="carousel-control right ico-chevron-right" data-slide='next'></a>
-                  </div>
-                {% endif %}
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="padding-row"></div>
-        <section class="listing-details">
-          <div class="container-fluid">
-            <div class="tab-content-container" id="navigation-tabs" data-reviews-controller="true" data-path="{{ 'reviews_path' | generate_url }}" data-reviewables="[{&quot;id&quot;:{{listing.id}},&quot;type&quot;:&quot;Transactable&quot;,&quot;subject&quot;:&quot;transactable&quot;},{&quot;id&quot;:{{listing.creator.id | default: "-1"}},&quot;type&quot;:&quot;User&quot;,&quot;subject&quot;:&quot;host&quot;}]" {%if platform_context.seller_attachments_enabled? %}data-seller-attachment-path="{{ 'seller_attachments_path' | generate_url }}" data-seller-attachable="{&quot;id&quot;:{{listing.id}},&quot;type&quot;:&quot;Transactable&quot;}"{%endif%}>
-              <ul class="nav nav-tabs page-tabs" role= 'tablist' data-tab-header="true">
-                <li class="{%if params.reviews_page == blank %}active{%endif%}">
-                  <a data-toggle='tab' href='#location-details' role='tab'>{{ 'buy_sell_market.products.labels.item_details' | translate }}</a>
-                </li>
-              </ul>
-              <div class="tab-content" data-tab-content="true">
-                <article id="location-details" class="location listing tab-pane active">
-                  {% if listing.transactable_type.show_page_enabled? %}
-                    {% include 'listings/listing_description.html' %}
-                  {% else %}
-                    {% include 'listings/location_description.html' %}
-                  {% endif %}
-                </article>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-      <div class="one-third column left">
-        <div class="toggleable-booking-modules">
-          {% include 'listings/booking_module_injection.html', listing: listing, collapsed: false %}
-          {% unless listing.transactable_type.show_page_enabled? %}
-            {% for sibling in listing_siblings %}
-              {% include 'listings/booking_module_injection.html', listing: sibling, collapsed: true %}
-            {% endfor %}
-          {% endunless %}
-        </div>
-        {% if platform_context.wish_lists_enabled? %}
-          {% include 'shared/components/wish_list_button_injection.html', object: listing, link_to_classes: 'btn btn-white btn-large ask' %}
-          <div class="padding-row"></div>
-        {% endif %}
-        {% if listing.administrator %}
-          {% include 'listings/administrator.html', administrator: listing.administrator %}
-        {% endif %}
-        {% include 'listings/google_map.html', location: listing.location %}
-        <div class="padding-row"></div>
-        {% include 'listings/social_buttons.html', url: listing.show_url, path: listing.show_path %}
-      </div>
-    </div>
-  </div>
-</article>
-<div class="clearfix padding-row"></div>
+
