--- a/app/views/dashboard/company/transactable_collaborators/_transactable_collaborator.html.haml
+++ b/app/views/dashboard/company/transactable_collaborators/_transactable_collaborator.html.haml
@@ -2,15 +2,15 @@
   %td= link_to transactable_collaborator.name, user_path(transactable_collaborator.user)
   %td.col-status
     - if transactable_collaborator.pending?
-      =t('pending')
+      =t('transactable_collaborator.pending')
     - elsif transactable_collaborator.approved?
-      =t('approved')
+      =t('transactable_collaborator.approved')
 
   %td
     - unless transactable_collaborator.approved_by_owner?
-      %button.button-a.small.action--approve{"data-project-collaborator": transactable_collaborator.id, "data-action": 'PUT'}
+      %button.button-a.small.action--approve{"data-transactable-collaborator": transactable_collaborator.id, "data-action": 'PUT'}
         %span.intelicon-check
-        = t :approve
-    %button.button-a.small.action--remove.red{"data-project-collaborator": transactable_collaborator.id, "data-action": 'DELETE'}
+        = t 'transactable_collaborator.approve'
+    %button.button-a.small.action--remove.red{"data-transactable-collaborator": transactable_collaborator.id, "data-action": 'DELETE'}
       %span.intelicon-trash-outlined
-      = t :remove
+      = t 'transactable_collaborator.remove'
