--- a/app/views/checkout/show.html.haml
+++ b/app/views/checkout/show.html.haml
@@ -1,6 +1,7 @@
 .checkout-wizard{ :"data-shipping-country-controller" => true, :"data-payment-controller" => true  }
   .page-wrapper
     %section.checkout-form
+
       .container-fluid
         %h2= t 'buy_sell_market.checkout.labels.order_summary'
         - first_item = @order.line_items.first || OpenStruct.new(included_tax_total_rate: 0, additional_tax_total_rate: 0)
@@ -92,16 +93,18 @@
                               = link_to back_order_checkout_path(@order), class: 'btn blue prev', data: { disable_with: t('general.processing') } do
                                 = t('buy_sell_market.checkout.buttons.back')
 
-                          .span3
-                            - if f.object.all_form_components.one?
+                          .span3.pull-right
+                            - if @order.reservation_type.try(:step_checkout?)
+                              - if f.object.all_form_components.one?
+                                %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
+                                  = t('reservations_review.buttons.request')
+                              - else
+                                %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
+                                  = t('buy_sell_market.checkout.buttons.continue')
+                            - elsif f.object.all_form_components.size == index + 1
                               %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
                                 = t('reservations_review.buttons.request')
-                            - else
-                              %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
-                                = t('buy_sell_market.checkout.buttons.continue')
 
-
-        =# render partial: 'checkout_buttons', locals: { form: f }
 
 - content_for :script do
   :javascript
