--- a/app/views/dashboard/company/transactables/form_fields/_price.html.haml
+++ b/app/views/dashboard/company/transactables/form_fields/_price.html.haml
@@ -17,4 +17,4 @@
       = at.input :transactable_id, as: :hidden
       = at.input :type, as: :hidden
       = at.hidden_field :enabled, value: at.object == @transactable.action_type, 'data-action': "#booking-type-#{at.object.name}"
-      = render "dashboard/company/transactables/form_fields/action_types/#{at.object.name}.html.haml", f: at, form_fields: form_fields
+      = render "dashboard/company/transactables/form_fields/action_types/#{at.object.name}.html.haml", f: at, fields: form_fields.map(&:values).flatten
