--- a/app/views/dashboard/company/recurring_bookings/_recurring_booking.html.haml
+++ b/app/views/dashboard/company/recurring_bookings/_recurring_booking.html.haml
@@ -75,11 +75,27 @@
     %p= recurring_booking.total_payable_to_host_formatted
 
 
+.row
+  .col-md-3
+  - if recurring_booking.guest_notes.present?
+    .col-sm-3
+      %h3= t('dashboard.user_reservations.exclusive_price_guests_notes')
+      %blockquote= recurring_booking.guest_notes
 
-
-- if recurring_booking.guest_notes.present?
-  %h3= t('dashboard.user_recurring_bookings.user_note')
-  %blockquote= recurring_booking.guest_notes
+  - if recurring_booking.payment_documents.select(&:persisted?).present?
+    .col-sm-3
+      %h3=  t('dashboard.user_reservations.payment_documents')
+      %ul.payment-documents
+        - recurring_booking.payment_documents.select(&:persisted?).each do |pd|
+          %li
+            %a{:href => pd.file.url, download: true}= pd.file.file_name
+  - if recurring_booking.additional_line_items.host.present?
+    .col-sm-3.right
+      %h3=  t('dashboard.user_reservations.additional_charges')
+      %ul.payment-documents
+        - recurring_booking.additional_line_items.host.each do |ac|
+          %li
+            =ac.name + ' - ' + humanized_money_with_cents_and_symbol(ac.total_price)
 
 
 .row
