NM-5072 select css

--- a/app/frontend/stylesheets/components/_booking_module.scss
+++ b/app/frontend/stylesheets/components/_booking_module.scss
@@ -498,7 +498,7 @@
     display: none;
   }
 
-  .reservation_request_dates .select2-container {
+  .order_dates .select2-container {
     background: #e6e6e6;
     transition: border 0.2s ease-in, opacity 0.2s ease-in, color 0.2s ease-in;
     margin-bottom: 8px;
