--- a/app/views/dashboard/reviews/_order_info.html.liquid
+++ b/app/views/dashboard/reviews/_order_info.html.liquid
@@ -1,6 +1,6 @@
 <div class="order-info">
   <p>
-    {{ 'dashboard.reviews.feedback.order_placed_with_date' | translate: date: created_at }}
+    {{ 'dashboard.reviews.feedback.order_placed_with_date' | translate: date: placed_at }}
   </p>
 
   <p>
