NM-xxx search inputs liquid small fix

--- a/app/views/home/_search_box_inputs.html.liquid
+++ b/app/views/home/_search_box_inputs.html.liquid
@@ -23,7 +23,7 @@
           </div>
         {% endif %}
       {% endif %}
-      <input name="transactable_type_id" type="hidden" value="{{ transactable_type.id }}">
+      <input name="transactable_type_id" type="hidden" value="{{ transactable_types[0].id }}">
 
       <div class="span2 pull-right">
         <a class="btn btn-green btn-large search-button" data-disable-with="{{ 'homepage.disabled_buttons.search' | translate }}" rel="submit" href="">
