--- a/app/views/dashboard/groups/_form.html.haml
+++ b/app/views/dashboard/groups/_form.html.haml
@@ -22,7 +22,7 @@
     = f.input :description, as: :text, required: true, input_html: { maxlength: 5000, cols: 40, rows: 8 }
 
   = f.simple_fields_for :current_address, (f.object.current_address.presence || f.object.build_current_address) do |address_form|
-    .fields.location
+    .fields.custom-location
       .address-form.no-address
         = render :partial => 'addresses/form', locals: { f: address_form, label: t('group.location'), required: false }
         = address_form.hidden_field :_destroy, value: false, class: 'marked-to-delete'
