--- a/app/views/registrations/attributes/_phones.html.haml
+++ b/app/views/registrations/attributes/_phones.html.haml
@@ -5,8 +5,12 @@
     - calling_code = '&nbsp;'
     - calling_code = "+#{f.object.country.calling_code}" if f.object.country
 
-    = f.input :phone, as: :tel, required: f.object.validation_for(:phone).try(:is_required?), prefix: calling_code, input_html: { data: { 'phone': true }}
-    = f.input :mobile_number, as: :tel, required: (f.object.validation_for(:phone).try(:is_required?) || f.object.validation_for(:mobile_number).try(:is_required?)), input_html: { data: { 'mobile-number': true }}, prefix: calling_code
+    %div{class: 'disabled-catch-container'}
+      = f.input :phone, as: :tel, required: f.object.validation_for(:phone).try(:is_required?), prefix: calling_code, input_html: { data: { 'phone': true, 'disabled-field-notice': I18n.t('dashboard.user_profile.phone_disabled_field_notice') }}
+      %div{class: 'click-catcher'}
+    %div{class: 'disabled-catch-container'}
+      = f.input :mobile_number, as: :tel, required: (f.object.validation_for(:phone).try(:is_required?) || f.object.validation_for(:mobile_number).try(:is_required?)), input_html: { data: { 'mobile-number': true, 'disabled-field-notice': I18n.t('dashboard.user_profile.phone_disabled_field_notice') }}, prefix: calling_code
+      %div{class: 'click-catcher'}
 
     = label_tag do
       = check_box_tag "#{f.object.class.name.underscore}_mobile_same_as_phone", '1', (f.object.phone == f.object.mobile_number), data: { 'same-as-phone-checkbox' => true }
