NM-5115 fixing reviews + various fixes

--- a/app/views/dashboard/company/transactables/form_fields/action_types/_time_based_booking.html.haml
+++ b/app/views/dashboard/company/transactables/form_fields/action_types/_time_based_booking.html.haml
@@ -21,7 +21,7 @@
   - if fields.include? 'action_rfq'
     = render "dashboard/company/transactables/form_fields/action_rfq", f: f
 
-  - if fields.include?('availability_rules') || fields.include?('schedule')
+  - if fields.include?('availability_rules')
     = render 'dashboard/company/transactables/form_fields/availability', f: f
 
   - if fields.include? 'minimum_booking_minutes'
