NM-5155 fixes wrong price for month price

--- a/app/views/dashboard/orders/_address.html.haml
+++ b/app/views/dashboard/orders/_address.html.haml
@@ -13,9 +13,7 @@
 
 %br/
 
-= address.city
-,
-= address.state.try(:abbr)
+= [address.city.presence, address.state.try(:abbr).presence].compact.join(',')
 = address.zip
 
 %br/
