--- a/app/views/buyers/_buyer_form.html.haml
+++ b/app/views/buyers/_buyer_form.html.haml
@@ -1,6 +1,8 @@
 - only_inputs ||= []
 
-- if only_inputs.empty? || (category = f.object.instance_profile_type.try(:categories).try(:roots).try(:detect) { |c| "Category - #{c.name}".to_sym == only_inputs.first}).present?
+- if only_inputs.empty? || only_inputs.include?(:enabled)
+  = f.input :enabled, as: :switch
+- elsif only_inputs.empty? || (category = f.object.instance_profile_type.try(:categories).try(:roots).try(:detect) { |c| "Category - #{c.name}".to_sym == only_inputs.first}).present?
   = render partial: 'dashboard/shared/fields/category', locals: { category: category, f: f, categorizable: f.object.instance_profile_type }
 - elsif only_inputs.empty? || f.object.instance_profile_type.custom_model_types.map { |c| "Custom Model - #{c.name}".to_sym }.include?(only_inputs.first)
   - custom_model = f.object.instance_profile_type.custom_model_types.find_by(name: only_inputs.first.to_s.split(" - ")[1])
