--- a/app/views/instance_admin/custom_attributes/_form.html.haml
+++ b/app/views/instance_admin/custom_attributes/_form.html.haml
@@ -34,6 +34,10 @@
     .input-container.col-xs-4
       = f.input :max_length, input_html: { class: 'form-control' }
   .row
+    .input-container.col-xs-12
+      = f.input :validation_only_on_update, as: :boolean, inline_label: true
+
+  .row
     .input-container.col-xs-6
       = f.input :input_html_options_string, label: t('instance_admin.manage.custom_attributes.input_html_options'), input_html: { value: f.object.input_html_options.map { |k, v| "#{k} => #{v}"}.join(', ') }, input_html: { class: 'form-control' }
     .input-container.col-xs-6
