--- a/app/views/registrations/buyers/_buyer_form.html.haml
+++ b/app/views/registrations/buyers/_buyer_form.html.haml
@@ -1,6 +1,8 @@
 - only_inputs ||= []
 
-- if only_inputs.empty? || (category = f.object.instance_profile_type.try(:categories).try(:roots).try(:detect) { |c| "Category - #{c.name}".to_sym == only_inputs.first}).present?
+- if only_inputs.empty? || only_inputs.include?(:enabled)
+  = f.input :enabled
+- elsif only_inputs.empty? || (category = f.object.instance_profile_type.try(:categories).try(:roots).try(:detect) { |c| "Category - #{c.name}".to_sym == only_inputs.first}).present?
   = render partial: 'dashboard/shared/fields/category', locals: { category: category, f: f, categorizable: f.object.instance_profile_type }
 - else
   - f.object.instance_profile_type.try(:custom_attributes).try(:each) do |attribute|
