--- a/app/views/checkout/attributes/_payments.html.haml
+++ b/app/views/checkout/attributes/_payments.html.haml
@@ -6,16 +6,19 @@
           %p= t 'recurring_reservations_review.prorated_info'
 
         #accordion2.accordion
-          - form.object.decorate.payment_methods.each_with_index do |payment_method, index|
-            - selected_payment_method = form.object.payment_method_id == payment_method.id || (index.zero? && form.object.payment_method_id.blank?)
-            .accordion-group
-              .accordion-heading
-                %a.accordion-toggle{"data-parent" => "#accordion2", "data-toggle" => "collapse", :href => "#collapse_#{payment_method.id}", "onclick" => "$(this).next().click();"}
-                  = payment_method.name
-                = form.radio_button :payment_method_id, payment_method.id, hidden: true, checked: selected_payment_method
-              .accordion-body.collapse{id: "collapse_#{payment_method.id}", class: (selected_payment_method ? "in" : '')}
-                .accordion-inner
-                  = render partial: "shared/payment_methods/" + payment_method.payment_method_type, locals: {f: form, payment_method: payment_method}
+          - if form.object.decorate.payment_methods.any?
+            - form.object.decorate.payment_methods.each_with_index do |payment_method, index|
+              - selected_payment_method = form.object.payment_method_id == payment_method.id || (index.zero? && form.object.payment_method_id.blank?)
+              .accordion-group
+                .accordion-heading
+                  %a.accordion-toggle{"data-parent" => "#accordion2", "data-toggle" => "collapse", :href => "#collapse_#{payment_method.id}", "onclick" => "$(this).next().click();"}
+                    = payment_method.name
+                  = form.radio_button :payment_method_id, payment_method.id, hidden: true, checked: selected_payment_method
+                .accordion-body.collapse{id: "collapse_#{payment_method.id}", class: (selected_payment_method ? "in" : '')}
+                  .accordion-inner
+                    = render partial: "shared/payment_methods/" + payment_method.payment_method_type, locals: {f: form, payment_method: payment_method}
+          - else
+            %h3= t("reservations_review.missing_payment_method")
   - if f.object.with_payment_subscription?
     #credit-card-select
       = f.simple_fields_for :payment_subscription_attributes, f.object.payment_subscription_decorator do |form|
